/*
  Quickstart

  | Link | | --- | | [Get Price](/docs/price-api#get-price-only-price) | | [Get Price (vsToken)](/docs/price-api#price-vstoken) | | [Get Price (with Extra Info)](/docs/price-api#get-price-with-extra-info) | 

  The version of the OpenAPI document: 2.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message Depth {

  PriceImpactRatio buy_price_impact_ratio = 106723683;

  PriceImpactRatio sell_price_impact_ratio = 107152107;

}

message ExtraInfo {

  LastSwappedPrice last_swapped_price = 359356422;

  QuotedPrice quoted_price = 83101775;

  enum Confidence_level {
    CONFIDENCE_LEVEL_HIGH = 0;
    CONFIDENCE_LEVEL_MEDIUM = 1;
    CONFIDENCE_LEVEL_LOW = 2;
  }

  Confidence_level confidence_level = 29937042;

  Depth depth = 95472323;

}

message LastSwappedPrice {

  int64 last_jupiter_sell_at = 124586869;

  string last_jupiter_sell_price = 192697032;

  int64 last_jupiter_buy_at = 484843850;

  string last_jupiter_buy_price = 5808198;

}

message PriceImpactRatio {

  PriceImpactRatioDepth depth = 95472323;

  int64 timestamp = 55126294;

}

message PriceImpactRatioDepth {

  float depth10 = 480848932;

  float depth100 = 410802255;

  float depth1000 = 150031967;

}

message PriceResponse {

  map<string, TokenPriceInfo> data = 3076010;

  float time_taken = 62588119;

}

message QuotedPrice {

  string buy_price = 446032304;

  int64 buy_at = 303817590;

  string sell_price = 144285212;

  int64 sell_at = 367691843;

}

message TokenPriceInfo {

  string id = 3355;

  string type = 3575610;

  string price = 106934601;

  ExtraInfo extra_info = 210670462;

}

