/*
  Quickstart

  | Link | | --- | | [Get Price](/docs/price-api#get-price-only-price) | | [Get Price (vsToken)](/docs/price-api#price-vstoken) | | [Get Price (with Extra Info)](/docs/price-api#get-price-with-extra-info) | 

  The version of the OpenAPI document: 2.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools.services.defaultservice;

import "google/protobuf/empty.proto";
import public "models/price_response.proto";

service DefaultService {
  rpc RootGet (RootGetRequest) returns (RootGetResponse);

}

message RootGetRequest {
  // Comma separate to pass in multiple
  string ids = 1;
  // By default, prices are denominated by USD. To denominate price in SOL, use `vsToken` with SOL mint address
  string vs_token = 2;
  // To use, pass in `showExtraInfo=true`, cannot use `vsToken` with this parameter
  string show_extra_info = 3;

}

message RootGetResponse {
    oneof response {
        PriceResponse price_response_200 = 1;
        google.protobuf.Empty empty_400 = 2;
        google.protobuf.Empty empty_500 = 3;
    }
}
