/*
  Quickstart

  | Link | | --- | | [Get Quote](/docs/swap-api/get-quote) | | [Build Swap Transaction](/docs/swap-api/build-swap-transaction) | | [Send Swap Transaction](/docs/swap-api/send-swap-transaction) | 

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools.services.swapservice;

import "google/protobuf/empty.proto";
import public "models/quote_response.proto";
import public "models/swap_instructions_response.proto";
import public "models/swap_request.proto";
import public "models/swap_response.proto";

service SwapService {
  rpc ProgramIdToLabelGet (google.protobuf.Empty) returns (ProgramIdToLabelGetResponse);

  rpc QuoteGet (QuoteGetRequest) returns (QuoteGetResponse);

  rpc SwapInstructionsPost (SwapInstructionsPostRequest) returns (SwapInstructionsPostResponse);

  rpc SwapPost (SwapPostRequest) returns (SwapPostResponse);

}

message ProgramIdToLabelGetResponse {
    oneof response {
        string string_200 = 1;
    }
}
message QuoteGetRequest {
  string input_mint = 1;
  string output_mint = 2;
  // - Raw amount to swap (before decimals) - Input Amount if `SwapMode=ExactIn` - Output Amount if `SwapMode=ExactOut` 
  int32 amount = 3;
  int32 slippage_bps = 4;
  // - ExactOut is for supporting use cases where you need an exact output amount, like using [Swap API as a payment service](/docs/swap-api/payments-through-swap) - In the case of `ExactIn`, the slippage is on the output token - In the case of `ExactOut`, the slippage is on the input token - Not all AMMs support `ExactOut`: Currently only Orca Whirlpool, Raydium CLMM, Raydium CPMM 
  string swap_mode = 5;
  // - Multiple DEXes can be pass in by comma separating them - For example: `dexes=Raydium,Orca+V2,Meteora+DLMM` - If a DEX is indicated, the route will **only use** that DEX - [Full list of DEXes here](https://lite-api.jup.ag/swap/v1/program-id-to-label) 
  repeated string dexes = 6;
  // - Multiple DEXes can be pass in by comma separating them - For example: `excludeDexes=Raydium,Orca+V2,Meteora+DLMM` - If a DEX is indicated, the route will **not use** that DEX - [Full list of DEXes here](https://lite-api.jup.ag/swap/v1/program-id-to-label) 
  repeated string exclude_dexes = 7;
  // - Restrict intermediate tokens within a route to a set of more stable tokens - This will help to reduce exposure to potential high slippage routes 
  bool restrict_intermediate_tokens = 8;
  // - Direct Routes limits Jupiter routing to single hop routes only - This may result in worse routes 
  bool only_direct_routes = 9;
  // - Instead of using versioned transaction, this will use the legacy transaction 
  bool as_legacy_transaction = 10;
  // - Take fees in basis points - Used together with `feeAccount` in /swap, see [Adding Fees](/docs/swap-api/add-fees-to-swap) guide 
  int32 platform_fee_bps = 11;
  // - Rough estimate of the max accounts to be used for the quote - Useful if composing your own transaction or to be more precise in resource accounting for better routes 
  int32 max_accounts = 12;
  // - If true, `slippageBps` will be overriden by Dynamic Slippage's estimated value - The value is returned in `/swap` endpoint 
  bool dynamic_slippage = 13;

}

message QuoteGetResponse {
    oneof response {
        QuoteResponse quote_response_200 = 1;
    }
}
message SwapInstructionsPostRequest {
  SwapRequest swap_request = 1;

}

message SwapInstructionsPostResponse {
    oneof response {
        SwapInstructionsResponse swap_instructions_response_200 = 1;
    }
}
message SwapPostRequest {
  SwapRequest swap_request = 1;

}

message SwapPostResponse {
    oneof response {
        SwapResponse swap_response_200 = 1;
    }
}
