/*
  Quickstart

  | Link | | --- | | [Get Token Information](/docs/token-api#get-token-information) | | [Get Mints in Market](/docs/token-api#get-tokens-in-market) | | [Get Tradable Mints](/docs/token-api#get-all-tradable-tokens) | | [Get Tokens by Tag](/docs/token-api#get-tagged-tokens) | | [Get New Tokens](/docs/token-api#get-new-tokens) | | [Get All Tokens](/docs/token-api#get-all-tokens) | 

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message Mint {

  string address = 73950222;

  string created_at = 295938284;

  optional double daily_volume = 174872578;

  int32 decimals = 28661571;

  map<string, AnyType> extensions = 198808559;

  optional string freeze_authority = 501339240;

  optional string logo_uri = 417262811;

  optional string mint_authority = 464022619;

  optional string minted_at = 52196531;

  string name = 3373707;

  optional string permanent_delegate = 462676493;

  string symbol = 350653033;

  repeated string tags = 3552281;

}

message MintIncludingDuplicates {

  string address = 73950222;

  string created_at = 295938284;

  optional double daily_volume = 174872578;

  int32 decimals = 28661571;

  map<string, AnyType> extensions = 198808559;

  optional string freeze_authority = 501339240;

  optional string logo_uri = 417262811;

  optional string mint_authority = 464022619;

  optional string minted_at = 52196531;

  string name = 3373707;

  optional string permanent_delegate = 462676493;

  string symbol = 350653033;

  repeated string tags = 3552281;

}

message MintWithCreationTimeAndMarkets {

  string mint = 3351650;

  string created_at = 295938284;

  string metadata_updated_at = 452935;

  int32 decimals = 28661571;

  optional string freeze_authority = 501339240;

  repeated string known_markets = 261936456;

  optional string logo_uri = 417262811;

  optional string mint_authority = 464022619;

  string name = 3373707;

  string symbol = 350653033;

}

