/*
  Quickstart

  | Link | | --- | | [Get Token Information](/docs/token-api#get-token-information) | | [Get Mints in Market](/docs/token-api#get-tokens-in-market) | | [Get Tradable Mints](/docs/token-api#get-all-tradable-tokens) | | [Get Tokens by Tag](/docs/token-api#get-tagged-tokens) | | [Get New Tokens](/docs/token-api#get-new-tokens) | | [Get All Tokens](/docs/token-api#get-all-tokens) | 

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package jupiter.token.services.defaultservice;

import "google/protobuf/empty.proto";
import public "models/combined_models/proto.proto";

service DefaultService {
  rpc AllGet (google.protobuf.Empty) returns (AllGetResponse);

  rpc MarketMarketAddressMintsGet (MarketMarketAddressMintsGetRequest) returns (MarketMarketAddressMintsGetResponse);

  rpc MintsTradableGet (google.protobuf.Empty) returns (MintsTradableGetResponse);

  rpc NewGet (NewGetRequest) returns (NewGetResponse);

  rpc TaggedTagGet (TaggedTagGetRequest) returns (TaggedTagGetResponse);

  rpc TokenAddressGet (TokenAddressGetRequest) returns (TokenAddressGetResponse);

}

message AllGetResponse {
    oneof response {
        Mint mint_200 = 1;
    }
}
message MarketMarketAddressMintsGetRequest {
  // A market/pool address
  string market_address = 1;

}

message MarketMarketAddressMintsGetResponse {
    oneof response {
        string string_200 = 1;
    }
}
message MintsTradableGetResponse {
    oneof response {
        string string_200 = 1;
    }
}
message NewGetRequest {
  // How many records to output in the result
  optional int64 limit = 1;
  // The offset into the result set. Used with `limit` to page through data. 
  optional int64 offset = 2;

}

message NewGetResponse {
    oneof response {
        MintWithCreationTimeAndMarkets mint_with_creation_time_and_markets_200 = 1;
    }
}
message TaggedTagGetRequest {
  // A comma-separated list of tags
  string tag = 1;

}

message TaggedTagGetResponse {
    oneof response {
        MintIncludingDuplicates mint_including_duplicates_200 = 1;
    }
}
message TokenAddressGetRequest {
  // The tokenâ€™s mint address
  string address = 1;

}

message TokenAddressGetResponse {
    oneof response {
        MintIncludingDuplicates mint_including_duplicates_200 = 1;
    }
}
